# lcox-teukm

./: .TODO.md.swp  .gitignore  DESIGN.md  LICENSE  README.md  TODO.md  assumptions.yaml  cases.csv  config.xlsx  config.yaml  mobile_tender_escort_concept.md  pyproject.toml  pyrightconfig.json  studies.yaml  swappable_reactor_concept.md  walkthrough-notes.md
.claude/: settings.local.json
.githooks/: commit-msg
docs/: architecture_v6.md  mrv_grounding.md  restructuring_target.md  sobol_sensitivity_plan.md
scripts/: _orphans.py  analysis.py  analyze.py  cases.py  compose.py  config.py  cost.py  data_classes.py  design.py  determine_cost.py  determine_journey_cost.py  energy.py  evaluate.py  finance.py  golden_output.txt  helpers.py  lcot.py  lcox-teukm.py  load_config.py  mrv_fleet.py  mrv_unify.py  optimize.py  optimizer.py  params.py  parity_check.py  physics.py  pipeline.py  plots.py  regression_check.py  report.py  run.py  schema.py  sizing.py  smoke_check.py  sobol_analysis.py  sources.py  store.py  strategies.py  studies.py  study.py  (+4 more)
scripts/assumptions/: __init__.py  load_assumptions.py  studies.py
scripts/common/: __init__.py  helpers.py  paths.py  schema.py
scripts/config/: __init__.py  load_config.py  studies.py
scripts/kernel/: __init__.py  analyze.py  design.py  evaluate.py  ingest.py  store.py
scripts/model/: __init__.py  costing.py  sources.py
scripts/model/strategies/: __init__.py  _shared.py  fuel_burn.py  port_swap_battery.py  reactor_direct.py  reactor_electric.py  reactor_electric_integrated.py  tether_charge.py
scripts/mrv/: mrv_fleet.py  mrv_unify.py  run_mrv.py
scripts/strategies/: __init__.py  _shared.py  fuel_burn.py  port_swap_battery.py  reactor_direct.py  reactor_electric.py  reactor_electric_integrated.py  tether_charge.py
scripts/viz/: __init__.py  plots.py  style.py
