[project]
name = "lcox-teukm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "h5netcdf>=1.3",
    "h5py>=3.11",
    "kaleido>=1.3.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "salib>=1.5",
    "xarray>=2025.1",
]
